--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
+# Editor-based Rest nio1.Client
 .idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
